fix: faq gap added

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -887,6 +887,7 @@ ul {
     padding: 0 100px;
     display: flex;
     align-items: flex-start;
+    gap: 100px;
 }
 
 .faq-section-flex-left p {
